--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 
-<!--Donde se encuentre este tag, se instancian los componentes dependientes del ruteo-->
+<app-navbar></app-navbar>
+
+
 <router-outlet></router-outlet>
+
+
+<app-footer></app-footer>
