--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,20 +1,28 @@
-<footer class="footer">
-  
-  <p>
-    Sala de Juegos por {{author}} UTN
-  </p>
-  <p>
-    
-    <a routerLink="/QuienSoy">
-      Sobre el autor
-      <i class="fa fa-user"></i>
-    </a>
-  </p>
-  <p>
-    <a href="https://github.com/guidoves">
-      en GitHub
-      <i class="fab fa-github"></i>
-    </a>
-  </p>
+<div class="container-fluid footer">
+  <div class="row text-center">
 
-</footer>
+    <div class="col footer">
+
+      <p>
+        Sala de Juegos por {{author}} UTN
+      </p>
+      <p>
+
+        <a routerLink="/QuienSoy">
+          Sobre el autor
+          <i class="fa fa-user"></i>
+        </a>
+      </p>
+      <p>
+        <a href="https://github.com/guidoves" target="_blank">
+          en GitHub
+          <i class="fab fa-github"></i>
+        </a>
+      </p>
+
+    </div>
+
+  </div>
+
+
+</div>
