--- a/src/app/components/principal/principal.component.css
+++ b/src/app/components/principal/principal.component.css
@@ -10,4 +10,35 @@ height: 70px;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #100000;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+
+    .titulo{
+        margin-top: 10px;
+        margin-bottom: 20px;
+        
     }
+    
+    .titulo p{
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .card {
+
+        box-shadow: 1px 2px 2px 1px black;
+
+    }
+
+    img {
+        margin-top: 10px;
+        border-radius: 50px    ;
+        -webkit-border-radius: 50px    ;
+        -moz-border-radius: 50px    ;
+        -ms-border-radius: 50px    ;
+        -o-border-radius: 50px    ;
+}
