--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,9 +1,9 @@
-<app-cabecera>  </app-cabecera>
+<!-- <app-cabecera>  </app-cabecera> -->
 
 
 
  
-<div class="container" >
+<!-- <div class="container m-5" >
    
     <ul class="list-group">
         <li class="list-group-item list-group-item-danger">
@@ -75,4 +75,84 @@
        
         
       </ul>
-</div>
+</div> -->
+
+<div class="mt-5 mb-5 row principal animated fadeIn">
+    <div class="col-12 titulo">
+      <p>
+        Bienvenido a la Sala de Juegos!
+      </p>
+      <p>
+        En este espacio encontraras varios juegos clasicos que a pesar de los años siguen en vigencia.
+      </p>
+      <p>
+        Que los disfrutes!
+      </p>
+    </div>
+    <div class="col-12">
+      <div class=" mb-4 row justify-content-around">
+
+        <div class="card col-sm-8 col-md-3">
+          <img class="img-circle card-img-top w-100" src="../../../assets/imagenes/piedra-papel-tijeras.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Piedra Papel o Tijera</h5>
+            <p class="card-text">Mucha suerte!</p>
+            
+          </div>
+          <div class="card-footer">
+              <a routerLink="/Juegos/PiedraPapelTijera" class="btn btn-success btn-block">Jugar</a>
+          </div>
+        </div>
+    
+        <div class="card col-sm-8 col-md-3">
+          <img class="card-img-top w-100" src="../../../assets/imagenes/agilidad.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Velocidad y agilidad aritmética</h5>
+            <p class="card-text">Pon a prueba tu velociad mental!</p>
+          </div>
+          <div class="card-footer">
+            <a routerLink="/Juegos/Agilidad" class="btn btn-primary btn-block">Jugar</a>
+          </div>
+        </div>
+    
+        <div class="card col-sm-8 col-md-3">
+          <img class="card-img-top w-100" src="../../../assets/imagenes/adivina.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Adivina el número secreto</h5>
+            <p class="card-text">Cuantos menos intentos mejor!</p>
+          </div>
+          <div class="card-footer">
+            <a routerLink="/Juegos/Adivina" class="btn btn-danger btn-block">Jugar</a>
+          </div>
+        </div>
+    
+      </div>
+      
+      <div class="row justify-content-around">
+        
+        <div class="card  col-sm-8 col-md-3">
+          <img class="card-img-top" src="../../../assets/imagenes/anagrama.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Anagrama</h5>
+            <p class="card-text">Cuantos menos intentos mejor!</p>
+          </div>
+          <div class="card-footer">
+            <a routerLink="/Juegos/Anagrama" class="btn btn-warning btn-block">Jugar</a>
+          </div>
+        </div>
+        
+        <div class="card  col-sm-8 col-md-3 ">
+          <img class="card-img-top" src="../../../assets/imagenes/piensa-rapido.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Piensa Rapido</h5>
+            <p class="card-text">Cuantos menos intentos mejor!</p>
+          </div>
+          <div class="card-footer">
+            <a routerLink="/Juegos/Piensa" class="btn btn-info btn-block">Jugar</a>
+          </div>
+        </div>
+
+      </div>
+  
+  
+    </div>
