--- a/src/app/components/piensa-rapido/game-piensa/game-piensa.component.html
+++ b/src/app/components/piensa-rapido/game-piensa/game-piensa.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   
   <div class="row">
-    <button (click)="comenzar(nivelUno)" class="btn btn-success">Comenzar</button>
+    <button (click)="comenzar(this.nivelUno)" class="btn btn-success">Comenzar</button>
   </div>
 
 
