--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -77,7 +77,7 @@
       </ul>
 </div> -->
 
-<div class="mt-5 mb-5 row principal animated fadeIn">
+<div class=" mb-5 row principal animated fadeIn">
     <div class="col-12 titulo">
       <p>
         Bienvenido a la Sala de Juegos!
@@ -138,6 +138,17 @@
           </div>
           <div class="card-footer">
             <a routerLink="/Juegos/Anagrama" class="btn btn-warning btn-block">Jugar</a>
+          </div>
+        </div>
+
+        <div class="card  col-sm-8 col-md-3">
+          <img class="card-img-top" src="../../../assets/imagenes/tateti.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Ta Te Ti</h5>
+            <p class="card-text">Cuantos menos intentos mejor!</p>
+          </div>
+          <div class="card-footer">
+            <a routerLink="/Juegos/Anagrama" class="btn btn-dark btn-block">Jugar</a>
           </div>
         </div>
         
