--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,32 @@
-<app-navbar></app-navbar>
 
+<div *ngIf="_login.isLogin === 1" >
 
-<div class="container">
+    <app-navbar></app-navbar>
+    
+    <div class="container-fluid">
+    
+        <router-outlet></router-outlet>
+    
+    </div>
+    
+    <app-footer></app-footer>
 
-    <router-outlet></router-outlet>
+</div>
+
+<div *ngIf="_login.isLogin === 0" >
+
+    <app-login></app-login>
 
 </div>
 
 
 
-<app-footer></app-footer>
+<div *ngIf="_login.isLogin === -1" >
+    <app-loading></app-loading>
+</div>
+
+
+
+
+
+
