--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,6 @@
+body {
+    background-color: black;
+}
 
 form {
     border: 10px solid #f1f1f1;
@@ -5,22 +8,35 @@ form {
     background:gray;
 }
 
-input[type=text], input[type=password] {
+.title{
+    font-family: 'Anton', sans-serif;
+    font-size: 20px;
+}
+
+span{
+    font-size: 30px;
+}
+
+/* input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-}
+} */
 
-button {
+/* button {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
+    width: 100%;
+} */
+
+button {
     width: 100%;
 }
 
@@ -38,7 +54,11 @@ button:hover {
     padding: 10px 18px;
     background-color: #3664F4;
 }
-.imgcontainer {
+
+img {
+    width: 200px;
+}
+/* .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
 }
@@ -46,15 +66,23 @@ button:hover {
 img.avatar {
     width: 40%;
     border-radius: 50%;
-}
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+} */
 
-.container {
+/* .container {
     padding: 16px;
 }
-
-span.psw {
+ */
+/* span.psw {
     float: right;
     padding-top: 16px;
+} */
+
+login {
+    border: solid black 1px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
