--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,14 +1,7 @@
 
 
-<div class="panel panel-default">
-    <div class="hero-text">
-        <h1 style="font-size:50px">Sala de Juegos</h1>
-        <p>Octavio villegas</p>
-        <a href="https://github.com/octaviovillegas"target="_blank">en GitHub <i class="fa fa-github"></i></a>
-        <a  routerLink="/QuienSoy"target="_blank">Quien Soy? <i class="fa fa-github"></i></a>
+<div class="mt-2">
+    <div class="alert alert-danger" role="alert">
+      Se perdió la conexión con la base de datos; comuníquese con el administrador del sistema.
     </div>
-    <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span>Registrase</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Ingresar</a></li>
-          </ul>
-</div>
+  </div>
