--- a/src/app/components/piedra-papel-tijera/piedra-papel-tijera.component.css
+++ b/src/app/components/piedra-papel-tijera/piedra-papel-tijera.component.css
@@ -1,10 +1,27 @@
-.header{
-    margin-top: 30px;
+header{
     margin-bottom: 30px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 30px;
+    text-align: center;
+    background-color:darkgreen;
+    color: whitesmoke;
 }
 
-.header h1{
-    font-family: 'Courier New', Courier, monospace;
+aside{
+    margin-left: 10px;
+    border: 1px solid black;
+    text-align: center;
+    height: 600px;
+    background-color: darkolivegreen;
+}
+
+section {
+    border : solid black 1px;
+    height: 600px;
+    background-color: darkcyan;
+    font-family: 'Mali', cursive;
+    font-size: 20px;
+
 }
 
 img{
@@ -12,26 +29,27 @@ img{
     height: 150px;
 }
 
+section img{
+    height: 230px;
+    width: 230px;
+}
+
 .opciones {
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.game{
-    display: inline-flex;
-    position: relative;
-}
-
-.gameEnd img{
-    width: 200px;
-    height: 200px;
-}
-
-.partida {
-    border : solid black 1px;
-    height: 600px;
-}
-
 .opcion {
-    
+    margin-top: 60px;
+    margin-bottom: 60px;
     height: 300px;
 }
+
+.resultado {
+    border: solid black 1px;
+}
+
+.marcador {
+    border: solid black 1px;
+}
+
