--- a/src/app/components/principal/principal.component.css
+++ b/src/app/components/principal/principal.component.css
@@ -1,4 +1,4 @@
-.imagenDeMenu{
+/* .imagenDeMenu{
 width: 80px;
 height: 70px;
 }
@@ -45,4 +45,27 @@ height: 70px;
         -moz-border-radius: 50px    ;
         -ms-border-radius: 50px    ;
         -o-border-radius: 50px    ;
+} */
+
+
+.titulo{
+    background-color: #310681;
+    height: 250px;
+    padding: 50px;
+}
+
+.titulo p{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    text-align: center;
+    color : whitesmoke;
+}
+
+
+.card {
+
+    box-shadow: 1px 2px 2px 1px black;
+    background-color: darkslategray;
+    color: white;
+
 }
