--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 
+<div></div>
+
 <div *ngIf="_login.isLogin === 1" >
 
     <app-navbar></app-navbar>
@@ -18,7 +20,6 @@
     <app-login></app-login>
 
 </div>
-
 
 
 <div *ngIf="_login.isLogin === -1" >
